# blackshark-linux

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/blackshark-client/: Cargo.toml
crates/blackshark-ctl/: Cargo.toml
crates/blackshark-ctl/src/: main.rs  proxy.rs
crates/blackshark-gui/: Cargo.toml
crates/blackshark-gui/src/: main.rs  pipewire.rs  proxy.rs
crates/blackshark-gui/ui/: main.slint
crates/blackshark-tray/: Cargo.toml
crates/blackshark-tray/src/: main.rs  proxy.rs
crates/blacksharkd/: Cargo.toml
crates/blacksharkd/src/: config.rs  dbus.rs  hid_actor.rs  main.rs  pipewire.rs  state.rs
crates/device/: Cargo.toml
crates/device/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
kernel/: hid-blackshark.c
pkg/: 99-blackshark.rules
src/: battery.rs  device.rs  main.rs  protocol.rs
